zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__render_stacks_without_pane_frames.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ─────────────────────── Pane #1 ───── [ ace-aardvark ]┼────────────────── Pane #7  [ fit-birdcage ] 
01 (C): ─────────────────────── Pane #9 ───── [ hip-bullfrog ]┤                                             
02 (C): ────────────────────── Pane #10 ───── [ hot-campfire ]┤                                             
03 (C):                                                       │                                             
04 (C):                                                       │                                             
05 (C):                                                       │                                             
06 (C):                                                       │                                             
07 (C):                                                       │                                             
08 (C):                                                       │                                             
09 (C):                                                       │                                             
10 (C):                                                       │                                             
11 (C):                                                       │                                             
12 (C):                                                       │                                             
13 (C):                                                       │                                             
14 (C):                                                       │                                             
15 (C):                                                       │                                             
16 (C):                                                       │                                             
17 (C):                                                       │                                             
18 (C):                                                       ├────────────────── Pane #8  [ fun-bluebird ] 
19 (C): ─────────────────────────────────────────────────┬────┴─────────────────────────────────────────────
20 (C): ───────────────────── Pane #2 ── [ apt-anteater ]┼───────────────────── Pane #4 ── [ coy-backpack ] 
21 (C): ───────────────────── Pane #3 ── [ big-antelope ]┼───────────────────── Pane #5 ── [ dry-backyard ] 
22 (C):                                                  │                                                  
23 (C):                                                  │                                                  
24 (C):                                                  │                                                  
25 (C):                                                  │                                                  
26 (C):                                                  │                                                  
27 (C):                                                  │                                                  
28 (C):                                                  │                                                  
29 (C):                                                  │                                                  
30 (C):                                                  │                                                  
31 (C):                                                  │                                                  
32 (C):                                                  │                                                  
33 (C):                                                  │                                                  
34 (C):                                                  │                                                  
35 (C):                                                  │                                                  
36 (C):                                                  │                                                  
37 (C):                                                  │                                                  
38 (C):                                                  │                                                  
39 (C):                                                  ├───────────────────── Pane #6 ── [ fab-barnacle ]
